[gd_scene load_steps=18 format=2]

[ext_resource path="res://Minijuegos/Lanchas/scenes/main.gd" type="Script" id=1]
[ext_resource path="res://Minijuegos/Lanchas/assets/kenney_piratePack/PNG/Default size/Ships/dinghyLarge1.png" type="Texture" id=2]
[ext_resource path="res://Minijuegos/Lanchas/assets/water.png" type="Texture" id=3]
[ext_resource path="res://Minijuegos/Lanchas/scenes/boat-move.gd" type="Script" id=4]
[ext_resource path="res://Minijuegos/Lanchas/etc/game_over_gui.tscn" type="PackedScene" id=5]
[ext_resource path="res://Minijuegos/Lanchas/scenes/ship-gen.gd" type="Script" id=6]
[ext_resource path="res://Minijuegos/Lanchas/assets/fonts/pirate.tres" type="DynamicFont" id=7]
[ext_resource path="res://Minijuegos/Lanchas/assets/puerto_mdp_satelital-1.jpg" type="Texture" id=8]
[ext_resource path="res://Minijuegos/Lanchas/assets/puerto_mdp_satelital-1.svg" type="Texture" id=9]
[ext_resource path="res://Minijuegos/Lanchas/scenes/map_layout.gd" type="Script" id=10]
[ext_resource path="res://Minijuegos/Lanchas/LoboMarino.tscn" type="PackedScene" id=11]
[ext_resource path="res://Minijuegos/Lanchas/Ship.tscn" type="PackedScene" id=12]
[ext_resource path="res://Minijuegos/Lanchas/etc/DialogUI.tscn" type="PackedScene" id=13]

[sub_resource type="TileSet" id=1]
0/name = "water.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 0.215686, 0.341176, 0.839216, 1 )
0/region = Rect2( 0, 0, 256, 256 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.51222
height = 12.2846

[sub_resource type="Animation" id=3]
resource_name = "SeaWaves"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sea:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 2.63902, 0.435275, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -15 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 198.143, 2282.39 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="MapMesh" type="StaticBody2D" parent="." groups=[
"scenary",
]]
position = Vector2( -314.414, -1179.77 )
rotation = -2.25464
scale = Vector2( 6.57007, 6.57007 )
collision_layer = 8

[node name="puerto_mdp_satelital-1" type="Sprite" parent="MapMesh"]
rotation = 2.98023e-08
texture = ExtResource( 9 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MapMesh"]
polygon = PoolVector2Array( -92.4047, -290.282, 106.146, -126.387, 98.9262, -117.001, 38.2779, -150.935, -31.0344, -188.479, -47.6405, -148.047, -44.0305, -94.619, -54.8605, -94.619, -57.0265, -146.603, -38.9764, -193.533, -146.555, -275.12, -218.033, -150.935, -163.883, -124.221, -105.401, -181.259, -91.6827, -170.429, -150.887, -98.229, -213.701, -88.121, -209.369, -4.36858, -159.551, -11.5886, -158.107, -1.48056, -189.153, 4.29546, -186.265, 38.2296, -212.257, 43.2836, -212.979, 12.2375, -258.465, 15.1255, -269.296, 44.7276, -285.902, 69.9978, -241.137, 67.8318, -228.863, 78.6618, -226.697, 106.098, -304.674, 121.982, -310.45, 147.974, -179.045, 128.48, -161.717, 153.028, -189.875, 192.738, -290.234, 190.572, -286.624, 216.564, -214.423, 212.954, -216.589, 236.781, -263.519, 254.831, -264.241, 275.047, -193.485, 265.661, -200.705, 226.672, -168.215, 259.885, -87.3507, 185.518, -101.069, 155.194, -119.841, 163.136, -137.169, 129.202, -122.729, 126.314, -102.513, 133.534, -84.4627, 176.854, 10.1198, 45.4496, 98.9262, -30.3607, 206.497, -81.7776, 213.312, -70.1924, -117.891, 327.241, -650.401, 330.384, -652.22, -351.867, -99.1423, -346.409 )

[node name="map_layout" type="Sprite" parent="."]
visible = false
position = Vector2( 602.714, 43.7106 )
rotation = -1.57079
scale = Vector2( 4.07459, 4.07459 )
texture = ExtResource( 8 )
script = ExtResource( 10 )

[node name="Sea" type="TileMap" parent="."]
visible = false
tile_set = SubResource( 1 )
cell_quadrant_size = 128
format = 1
tile_data = PoolIntArray( -196616, 0, 0, -196612, 0, 0, -262144, 0, 0, -262140, 0, 0, -262136, 0, 0, -262132, 0, 0, -262128, 0, 0, 65528, 0, 0, 65532, 0, 0, 65533, 0, 0, 0, 0, 0, 4, 0, 0, 8, 0, 0, 12, 0, 0, 16, 0, 0, 327672, 0, 0, 327676, 0, 0, 262144, 0, 0, 262148, 0, 0, 262152, 0, 0, 262156, 0, 0, 262160, 0, 0, 589816, 0, 0, 589820, 0, 0, 524288, 0, 0, 524292, 0, 0, 524296, 0, 0, 524300, 0, 0, 524304, 0, 0, 655352, 0, 0, 851960, 0, 0, 851964, 0, 0, 786432, 0, 0, 786436, 0, 0, 786440, 0, 0, 786444, 0, 0, 1114104, 0, 0, 1114108, 0, 0, 1048576, 0, 0, 1048580, 0, 0, 1048584, 0, 0, 1048588, 0, 0, 1376248, 0, 0, 1376252, 0, 0, 1310720, 0, 0, 1310724, 0, 0, 1310728, 0, 0, 1310732, 0, 0 )

[node name="EntityGenerator" type="Node2D" parent="."]
script = ExtResource( 6 )
SHIP = ExtResource( 12 )
LOBO = ExtResource( 11 )

[node name="Boat" type="KinematicBody2D" parent="."]
position = Vector2( 1500, -1200 )
rotation = 1.5708
collision_mask = 27
script = ExtResource( 4 )
speed = 20

[node name="Camera2D" type="Camera2D" parent="Boat"]
rotation = 4.71239
rotating = true
current = true

[node name="sprite" type="Sprite" parent="Boat"]
rotation = -1.42109e-14
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="col" type="CollisionShape2D" parent="Boat"]
scale = Vector2( 6, 6 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="Boat"]

[node name="col2" type="CollisionShape2D" parent="Boat/Area2D"]
scale = Vector2( 6, 6 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "SeaWaves"
anims/SeaWaves = SubResource( 3 )

[node name="GameOverUI" parent="." instance=ExtResource( 5 )]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="UI"]
margin_left = 28.364
margin_top = 575.462
margin_right = 571.364
margin_bottom = 676.465
rect_rotation = -89.9999
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.968627, 0.941176, 0.941176, 1 )
text = "Integridad Lancha"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBarBG" type="ColorRect" parent="UI"]
margin_left = 93.0
margin_top = 577.0
margin_right = 568.0
margin_bottom = 633.0
rect_rotation = -89.9999
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="ColorRect" parent="UI"]
margin_left = 98.0
margin_top = 572.0
margin_right = 563.0
margin_bottom = 618.0
rect_rotation = -89.9999
color = Color( 0.960784, 0.247059, 0.247059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score2" type="Label" parent="UI"]
visible = false
margin_left = 880.496
margin_top = 556.419
margin_right = 1423.5
margin_bottom = 657.422
rect_rotation = -89.9999
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.968627, 0.941176, 0.941176, 1 )
text = "Progreso del Viaje"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBarBG" type="ColorRect" parent="UI"]
visible = false
margin_left = 946.842
margin_top = 570.813
margin_right = 1421.84
margin_bottom = 626.813
rect_rotation = -89.9999
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ColorRect" parent="UI"]
visible = false
margin_left = 952.033
margin_top = 565.85
margin_right = 1417.03
margin_bottom = 611.85
rect_rotation = -89.9999
color = Color( 0.247059, 0.52549, 0.960784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" parent="UI" instance=ExtResource( 13 )]
margin_right = 325.49
margin_bottom = 317.755

[node name="AreaMarAbierto" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaMarAbierto"]
position = Vector2( -2062.49, -1138.05 )
shape = SubResource( 4 )

[node name="Lobos" type="Node2D" parent="."]

[node name="Lobo3" parent="Lobos" instance=ExtResource( 11 )]
position = Vector2( -26.9392, -736.335 )
speed_mult = 0
size = 2

[node name="Lobo4" parent="Lobos" instance=ExtResource( 11 )]
position = Vector2( -94.2869, -1153.89 )
speed_mult = 0
size = 2

[node name="Lobo5" parent="Lobos" instance=ExtResource( 11 )]
position = Vector2( -395.107, -350.208 )
speed_mult = 0
size = 5

[node name="Lobo6" parent="Lobos" instance=ExtResource( 11 )]
position = Vector2( -745.315, -1311.04 )
speed_mult = 0

[node name="Lobo7" parent="Lobos" instance=ExtResource( 11 )]
position = Vector2( -747.315, -1076.52 )
speed_mult = 0
size = 2

[node name="Lobo8" parent="Lobos" instance=ExtResource( 11 )]
position = Vector2( -752.723, -844.091 )
speed_mult = 0

[node name="Lobo" parent="Lobos" instance=ExtResource( 11 )]
position = Vector2( 669.581, -597.537 )
speed_mult = 0
size = 3

[node name="Ship" parent="Lobos" instance=ExtResource( 11 )]
position = Vector2( 522.905, -931.479 )
speed_mult = 0
size = 2

[node name="Lobo2" parent="Lobos" instance=ExtResource( 11 )]
position = Vector2( 246.942, -475.924 )
speed_mult = 0
size = 2
[connection signal="body_entered" from="Boat/Area2D" to="Boat" method="_on_Area2D_body_entered"]
[connection signal="ok_pressed" from="GameOverUI" to="." method="_on_GameOverUI_ok_pressed"]
[connection signal="dialog_terminated" from="UI/Control" to="." method="_on_Control_dialog_terminated"]
[connection signal="body_entered" from="AreaMarAbierto" to="Boat" method="_on_AreaMarAbierto_body_entered"]
